org.mmisw.orrportal: MMI ORR Portal
Carlos Rueda  -  http://marinemetadata.org
$Id$

2010-09-07   2.0.2.beta
	- PortalConfig.BIOPORTAL_REST_URL deprecated (this info now provided by orrclient
	  based on the Ont service)
	- TODO: This deprecated property is only used by org.mmisw.orrportal.gwt.server.OntologyUploader,
	  which itself is also deprecated and only used by
	  OrrServiceImpl.upload(ReviewResult_Old reviewResult_Old, LoginResult loginResult_Old),
	  which is called (via the async interface) by 
	  org.mmisw.orrportal.gwt.client.metadata.MainPanel.doUpload(),;
	  this MainPanel is only used by ..metadata.UploadOntologyPanel,
	  which is not used either --> in summary, remove all the unused stuff.
	
2010-09-04   2.0.2.beta
	- Changes because of changes in orrclient library (formerly iserver)
	
	- Renamings:
		- Module at svn renamed to org.mmisw.orrportal (formerly org.mmisw.ontmd).
		- Packages org.mmisw.ontmd{.**} --> org.mmisw.orrportal{.**}
		

2010-09-03   2.0.1.beta
	More clean-up
		- REMOVED the following related with old (unused) code for voc2rdf
		  (voc2rdf core funcionality provided by the iserver module):
			- In OntMdService{Async}: AppInfo getVoc2RdfAppInfo();
			- In OntMdService{Async}: Voc2RdfBaseInfo getVoc2RdfBaseInfo();
			- In OntMdService{Async}: ConversionResult convert2Rdf(Map<String,String> values);
			- class ..gwt.server.voc2rdf.Converter
			- class ..gwt.server.voc2rdf.Voc2RdfImpl
			- full obsolete package org.mmisw.voc2rdf.transf:
					OwlCreatorComplex.java
					StringManipulationInterface.java
					StringManipulationUtil.java
					TransProperties.java
					Transformation.java	
					Transformer.java	
					package-info.java	
					
		- class ..gwt.client.UploadPanel REMOVED (unused)		
		- class ..gwt.server.portal.PortalImpl renamed/moved to ..gwt.server.OrrClientProxy
		- packages	..gwt.server.portal and ..gwt.server.voc2rdf REMOVED (empty now)
		- class ..gwt.server.MdHelper_OLD REMOVED (unused, obsolete)
		