@@ -1,0 +1,9 @@
+<!-- 
+# ignore: yes
+#
+# This file is the fragment to include right before </body> in the main page, index.jsp.
+# All lines starting with # are omitted for purposes of the included contents. 
+# The contents are always included unless there is a line starting with ``# ignore: yes''.
+# 
+-->
+<i> example bbot fragment </i>  
