@@ -1,0 +1,34 @@
+<!-- 
+# ignore: yes
+#
+# This file is the fragment to include right after <body> in the main page, index.jsp.
+# All lines starting with # are omitted for purposes of the included contents. 
+# The contents are always included unless there is a line starting with ``# ignore: yes''.
+#
+# The content below is an example that shows a notice about a certain planned downtime of the system.
+# 
+-->
+<style type="text/css">
+<!--
+.style1 {
+	font-size: normal;
+	font-weight: bold;
+	color: #FFFFFF;
+}
+-->
+</style>
+<table width="100%" border="2" cellpadding="2" cellspacing="0" bordercolor="#FF0000">
+  <tr bgcolor="#FF0000">
+    <td><div align="center" class="style1">Site will be down for maintenance</div></td>
+  </tr>
+  <tr>
+    <td>
+
+The site will be down to allow for special maintenance and the installation of recommended 
+security and OS updates on Tuesday, August 31, 2021 between 6:00 PM and 7:30 PM PST. 
+We apologize for the inconvenience. 
+If you have any questions, please <a href="mailto:drupal-admin@marinemetadata.org">email us</a>.
+
+</td>
+  </tr>
+</table>
